--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 
 		</div>
 		<div class="col-sm-4">
-		<p>We are part of the <a href="https://www.physik.lmu.de/en//">Chemistry and Biochemistry Department</a> at<a href="https://www.lmu.de"> Butler University</a>.</p>
+		<p>We are part of the <a href="https://www.butler.edu/arts-sciences/chemistry-biochemistry/">Chemistry and Biochemistry Department</a> at<a href="https://www.butler.edu/"> Butler University</a>.</p>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
